--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".SocketActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_socket" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
